# Hello-Machine-Learning

./: .gitignore  README.md  basic-operator.py.ipynb
famous-frameworks/byteps/: run.sh
famous-frameworks/gluon/: softmax_regression.ipynb
famous-frameworks/horovod/: run.sh  tf2_keras.py
famous-frameworks/paddlepaddle/: linear_regression.py
famous-frameworks/pytorch/: quick_start.py
famous-frameworks/tensorflow/: check_tfrecord.py  do-embedding_v1.py  embedding-projector_v1.py  tensorboard_v2.py  tensorboard_v3.py
famous-frameworks/tensorflow/WordEmbedding/word2vec_simple/: word2vec_simple.ipynb  word2vec_simple.py
famous-frameworks/tensorflow/WordEmbedding/word2vec_simple/model-simple/: model.ckpt.data-00000-of-00001  model.ckpt.index
famous-frameworks/tensorflow/WordEmbedding/word2vec_wiki/: word2vec_wiki.ipynb
famous-frameworks/tensorflow/distributed_train/: estimator_version.py  estimator_version_horovod.py  session_version.py
famous-frameworks/tensorflow/pb_pbtxt/: ludev.pb  ludev.pbtxt  pb2pbtxt.py  show.py  show2.py  show3.py
famous-frameworks/tensorflow/serving/inception-model/client_cpp/: CMakeLists.txt  inception_client.cc
famous-frameworks/tensorflow/serving/inception-model/model-convert/: inception_saved_model.py
famous-frameworks/tensorflow/tensorflow_logs/do-embedding_v1/: events.out.tfevents.1532173612.ZBMAC-C02W138AH.local  events.out.tfevents.1532173776.ZBMAC-C02W138AH.local  events.out.tfevents.1532174105.ZBMAC-C02W138AH.local  metadata.tsv  model.ckpt.index
famous-frameworks/tensorflow/tensorflow_logs/example/: events.out.tfevents.1534832063.ZBMAC-C02W138AH.local
famous-frameworks/tensorflow/tfma/: csv2tf.py  test-data.csv  tfma.ipynb  train.tfrecords  training-data.csv
famous-frameworks/tflearn/models/: checkpoint  lstm.tfl.index
famous-frameworks/xgboost/: hello-xgbfir.py  trans_data_pairwise.py
famous-models/: gmm.py  text_helpers.py  word2vec_cbow.py
frameworks/gluon/: demo_rnn.py  linear_regression_gluon.ipynb  softmax_regression_gluon.ipynb
frameworks/tensorflow/: do-embedding.py  do-embedding_v1.py  predict_with_saved_model.py  tensorboard_v1.py  tensorboard_v3.py  tensorflow_version.py
frameworks/tensorflow/FM/: FM.py
frameworks/tensorflow/WordEmbedding/: word2vec_wiki.ipynb
frameworks/tensorflow/WordEmbedding/word2vec/: run.sh  word2vec.ipynb
frameworks/tensorflow/WordEmbedding/word2vec_simple/: word2vec_simple.ipynb
frameworks/tensorflow/WordEmbedding/word2vec_wiki/: word2vec_wiki.ipynb
frameworks/tensorflow/serving/: inception_client.py  inception_saved_model.py
frameworks/tensorflow/serving/client/: mnist_tfs_client.py  run-tfs-client.sh
frameworks/tflearn/: embedding_v1.py
frameworks/xgboost/: train-to-test.py
papers/: SRA_rank.markdown  apple_ml.markdown
(+13 files in other folders)
